2017-01-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FTerm::parseKeyString and timeout settings

2017-01-02  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of secondary device attributes parsing
        * Small menu improvements

2017-12-31  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of the FListBox mouse event handler
	* Refactoring of the FMenuBar mouse event handler
	* Replace the switch-case in the calculator example by an STL map 
	  with method pointers

2017-12-29  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of the FDialog mouse event handler

2017-12-27  Markus Gans  <guru.mail@muenster.de>
	* Generalize scroll functions in FScrollView
	* Refactoring FScrollbar::drawBar
	* Refactoring FLineEdit::onKeyPress
	* Refactoring FMenu::onKeyPress
	* Refactoring FDialog::onKeyPress
	* Refactoring FDialog::drawTitleBar
	* New FDialog methods moveUp(), moveDown(), moveLeft(), 
	  moveRight(), reduceHeight(), expandHeight(), reduceWidth(), 
	  and expandWidth()

2017-12-25  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FButton::draw
	* Passing more strings by reference

2017-12-21  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FMenuBar::drawItems
	* (de)allocation functions in FTerm

2017-12-19  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FMenu::drawItems

2017-12-17  Markus Gans  <guru.mail@muenster.de>
	* The Final Cut now also compiles under Solaris

2017-12-14  Markus Gans  <guru.mail@muenster.de>
	* Add Sun Microsystems workstation console support

2017-12-10  Markus Gans  <guru.mail@muenster.de>
	* Refactoring of the FMenu mouse event handler

2017-12-08  Markus Gans  <guru.mail@muenster.de>
	* More individual arithmetic operations methods in 
	  the implementation of the calculator example

2017-12-05  Markus Gans  <guru.mail@muenster.de>
	* Refactoring FApplication::processMouseEvent
	* Refactoring FApplication::processKeyboardEvent

2017-12-02  Markus Gans  <guru.mail@muenster.de>